Model implementation improvement

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="/dist/output.css" rel="stylesheet">
     <title>Laravel Shift Blueprint Generator</title>
   </head>
-  <body>
+  <body style="background-color: #121212; border-color: #202425;" class="text-white">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
