Extra modifier now are added to the YAML correctly
BUG: On adding new column info, the extra modifiers get dupplicated
(Apparently from the last updated column component)
TODO: Handle the removal of the extra modifiers onclick the X button
TODO: Handle responsive input of extra modifiers

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -8,8 +8,8 @@
     <link href="/dist/output.css" rel="stylesheet">
     <title>Laravel Shift Blueprint Generator</title>
   </head>
-  <body style="background-color: #121212; border-color: #202425;" class="text-white">
-    <div id="app"></div>
+  <body>
+    <div id="app" class="text-white"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
